# manipulation_tracking

./: CMakeLists.txt  LICENSE.TXT  README.md  feedback_transform.py  publish_kinect_tf
config/: errorcalculator_config.yaml  errorcalculator_cubetocube.yaml  estimator_config.yaml  estimator_config_apriltags_only.yaml  estimator_config_gelsight.yaml  estimator_config_irb140_gelsight.yaml  estimator_config_irb140_gelsight_cube.yaml  estimator_config_irb140_gelsight_gt_apriltag.yaml  estimator_config_irb140_gelsight_gt_optotrak.yaml  estimator_config_lids_open.yaml  estimator_config_oil_bottle.yaml  estimator_config_tiny_bolt.yaml  mesh_models_config_ex.yaml  object_detector_cube.yaml  object_scanning_setup.pmd  object_scanning_setup.yaml  procman_object_setup.pmd  testGelsightCost_config.yaml  testGelsightCost_screwdriver_config.yaml  testGelsightCost_tiny_bolt_config.yaml
pcd/: cube.normals.pcd  cube.pts.pcd
src/: AttachedApriltagCost.cpp  AttachedApriltagCost.hpp  CMakeLists.txt  DynamicsCost.cpp  DynamicsCost.hpp  GelsightCost.cpp  GelsightCost.hpp  GelsightOpenGLSim.cpp  GelsightOpenGLSim.hpp  JointStateCost.cpp  JointStateCost.hpp  KinectFrameCost.cpp  KinectFrameCost.hpp  ManipulationTracker.cpp  ManipulationTracker.hpp  ManipulationTrackerCost.hpp  NonpenetratingObjectCost.cpp  NonpenetratingObjectCost.hpp  OptotrakMarkerCost.cpp  OptotrakMarkerCost.hpp  RobotStateCost.cpp  RobotStateCost.hpp  gelsight_sim.cpp  generatePointCloudFromURDF.cpp  runErrorCalculator.cpp  runManipulationTracker.cpp  runObjectDetector.cpp  testGelsightCost.cpp  test_2D_sdf.cpp
src/common/: common.hpp  sdf_2d_functions.hpp
src/costs/: AttachedApriltagCost.cpp  AttachedApriltagCost.hpp  CMakeLists.txt  DynamicsCost.cpp  DynamicsCost.hpp  GelsightCost.cpp  GelsightCost.hpp  JointStateCost.cpp  JointStateCost.hpp  KinectFrameCost.cpp  KinectFrameCost.hpp  ManipulationTrackerCost.hpp  NonpenetratingObjectCost.cpp  NonpenetratingObjectCost.hpp  OptotrakMarkerCost.cpp  OptotrakMarkerCost.hpp  RobotStateCost.cpp  RobotStateCost.hpp
src/detection/: CMakeLists.txt  minlp_detector.cpp  miqp_detector.cpp  miqp_mesh_model_detector.cpp  miqp_multiple_mesh_models_detector.cpp  miqp_point_model_detector.cpp  optimization_helpers.h  rotation_helpers.h  test3DRotationApprox.cpp  testMcCormickEnvelope.cpp
src/object_scanning/: CMakeLists.txt  ObjectScan.cpp  ObjectScan.hpp  runObjectScanner.cpp
src/test/: CMakeLists.txt  gelsight_sim.cpp  testGelsightCost.cpp  test_2D_sdf.cpp
urdf/: cardbox_box_hollow_with_lid.urdf  compressed_air_can.urdf  cube.urdf  desk.urdf  engine.urdf  gelsight_rig.urdf  gelsight_rig_no_collision.urdf  hole_box.urdf  irb140_chull.urdf  irb140_chull_ati_gelsight.urdf  irb140_chull_ati_gelsight_no_collision.urdf  irb140_chull_robotiq.urdf  irb140_chull_robotiq_actuated_fingers.urdf  irb140_chull_robotiq_fourbar_fingers.urdf  jasmine_tea_box.urdf  oil_bottle.stl  oil_bottle.urdf  optotrak.urdf  optotrak_cube.urdf  robotiq_simple_collision.urdf  tiny_bolt.urdf  tiny_screwdriver.urdf  xtion.urdf
urdf/engine/: Engine_subs2_scale.stl  Engine_subs_scale.stl
urdf/screwdriver_torx/: 625330_TX10_Garant.stl  screwdriver_torx.urdf
