set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(test_2D_sdf test_2D_sdf.cpp)
target_link_libraries(test_2D_sdf)
pods_use_pkg_config_packages(test_2D_sdf eigen3)
pods_install_executables(test_2D_sdf)

add_library(ManipulationTracker SHARED ManipulationTracker.cpp)
pods_use_pkg_config_packages(ManipulationTracker drake-convex-hull eigen3)
target_link_libraries(ManipulationTracker drakeRBM yaml-cpp bot2-core bot2-frames bot2-param-client)
pods_install_libraries(ManipulationTracker)
pods_install_headers(ManipulationTracker.hpp DESTINATION perception_manipulation_tracker)

add_library(RobotStateCost SHARED RobotStateCost.cpp)
pods_use_pkg_config_packages(RobotStateCost lcmtypes_drc_lcmtypes lcm bot2-core)
target_link_libraries(RobotStateCost ManipulationTracker yaml-cpp)
pods_install_libraries(RobotStateCost)
pods_install_headers(RobotStateCost.hpp DESTINATION perception_manipulation_tracker)

add_library(JointStateCost SHARED JointStateCost.cpp)
pods_use_pkg_config_packages(JointStateCost lcmtypes_drc_lcmtypes lcm bot2-core)
target_link_libraries(JointStateCost ManipulationTracker yaml-cpp)
pods_install_libraries(JointStateCost)
pods_install_headers(JointStateCost.hpp DESTINATION perception_manipulation_tracker)

add_library(DynamicsCost SHARED DynamicsCost.cpp)
pods_use_pkg_config_packages(DynamicsCost lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv)
target_link_libraries(DynamicsCost ManipulationTracker yaml-cpp)
pods_install_libraries(DynamicsCost)
pods_install_headers(DynamicsCost.hpp DESTINATION perception_manipulation_tracker)

add_library(KinectFrameCost SHARED KinectFrameCost.cpp)
pods_use_pkg_config_packages(KinectFrameCost lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv)
target_link_libraries(KinectFrameCost ManipulationTracker yaml-cpp)
pods_install_libraries(KinectFrameCost)
pods_install_headers(KinectFrameCost.hpp DESTINATION perception_manipulation_tracker)

add_library(GelsightCost SHARED GelsightCost.cpp)
pods_use_pkg_config_packages(GelsightCost lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv)
target_link_libraries(GelsightCost ManipulationTracker yaml-cpp)
pods_install_libraries(GelsightCost)
pods_install_headers(GelsightCost.hpp DESTINATION perception_manipulation_tracker)

add_library(AttachedApriltagCost SHARED AttachedApriltagCost.cpp)
pods_use_pkg_config_packages(AttachedApriltagCost lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv)
target_link_libraries(AttachedApriltagCost ManipulationTracker yaml-cpp)
pods_install_libraries(AttachedApriltagCost)
pods_install_headers(AttachedApriltagCost.hpp DESTINATION perception_manipulation_tracker)

add_library(OptotrakMarkerCost SHARED OptotrakMarkerCost.cpp)
pods_use_pkg_config_packages(OptotrakMarkerCost lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv)
target_link_libraries(OptotrakMarkerCost ManipulationTracker yaml-cpp)
pods_install_libraries(OptotrakMarkerCost)
pods_install_headers(OptotrakMarkerCost.hpp DESTINATION perception_manipulation_tracker)

add_executable(runManipulationTracker runManipulationTracker.cpp)
target_link_libraries(runManipulationTracker ManipulationTracker RobotStateCost GelsightCost JointStateCost KinectFrameCost AttachedApriltagCost DynamicsCost OptotrakMarkerCost yaml-cpp)
pods_install_executables(runManipulationTracker)

add_executable(runErrorCalculator runErrorCalculator.cpp)
pods_use_pkg_config_packages(runErrorCalculator lcmtypes_drc_lcmtypes lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv drake-convex-hull eigen3)
target_link_libraries(runErrorCalculator drakeRBM drakeJoints drakeUtil drakeXMLUtil drakeCommon yaml-cpp)
pods_install_executables(runErrorCalculator)

add_executable(testGelsightCost testGelsightCost.cpp)
target_link_libraries(testGelsightCost ManipulationTracker RobotStateCost GelsightCost JointStateCost KinectFrameCost AttachedApriltagCost DynamicsCost OptotrakMarkerCost yaml-cpp bot2-core bot2-frames bot2-param-client drakeRBM drakeJoints drakeCollision drakeUtil drakeXMLUtil drakeCommon)
pods_install_executables(testGelsightCost)