pods_install_headers(ManipulationTrackerCost.hpp DESTINATION perception_manipulation_tracker)

add_library(RobotStateCost SHARED RobotStateCost.cpp)
pods_use_pkg_config_packages(RobotStateCost lcm bot2-core)
target_link_libraries(RobotStateCost ManipulationTracker yaml-cpp)
pods_install_libraries(RobotStateCost)
pods_install_headers(RobotStateCost.hpp DESTINATION perception_manipulation_tracker)

add_library(JointStateCost SHARED JointStateCost.cpp)
pods_use_pkg_config_packages(JointStateCost lcm bot2-core)
target_link_libraries(JointStateCost ManipulationTracker yaml-cpp)
pods_install_libraries(JointStateCost)
pods_install_headers(JointStateCost.hpp DESTINATION perception_manipulation_tracker)

add_library(DynamicsCost SHARED DynamicsCost.cpp)
pods_use_pkg_config_packages(DynamicsCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils)
target_link_libraries(DynamicsCost ManipulationTracker yaml-cpp)
pods_install_libraries(DynamicsCost)
pods_install_headers(DynamicsCost.hpp DESTINATION perception_manipulation_tracker)

add_library(KinectFrameCost SHARED KinectFrameCost.cpp)
pods_use_pkg_config_packages(KinectFrameCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils drake-common drake-rbm drake-joints)
target_link_libraries(KinectFrameCost ManipulationTracker yaml-cpp ${OpenCV_LIBS} pthread)
pods_install_libraries(KinectFrameCost)
pods_install_headers(KinectFrameCost.hpp DESTINATION perception_manipulation_tracker)

add_library(NonpenetratingObjectCost SHARED NonpenetratingObjectCost.cpp)
pods_use_pkg_config_packages(NonpenetratingObjectCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils)
target_link_libraries(NonpenetratingObjectCost ManipulationTracker yaml-cpp)
pods_install_libraries(NonpenetratingObjectCost)
pods_install_headers(NonpenetratingObjectCost.hpp DESTINATION perception_manipulation_tracker)

add_library(GelsightCost SHARED GelsightCost.cpp)
pods_use_pkg_config_packages(GelsightCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils)
target_link_libraries(GelsightCost ManipulationTracker yaml-cpp ${OpenCV_LIBS} pthread)
pods_install_libraries(GelsightCost)
pods_install_headers(GelsightCost.hpp DESTINATION perception_manipulation_tracker)

add_library(AttachedApriltagCost SHARED AttachedApriltagCost.cpp)
pods_use_pkg_config_packages(AttachedApriltagCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils)
target_link_libraries(AttachedApriltagCost ManipulationTracker yaml-cpp)
pods_install_libraries(AttachedApriltagCost)
pods_install_headers(AttachedApriltagCost.hpp DESTINATION perception_manipulation_tracker)

add_library(OptotrakMarkerCost SHARED OptotrakMarkerCost.cpp)
pods_use_pkg_config_packages(OptotrakMarkerCost lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils)
target_link_libraries(OptotrakMarkerCost ManipulationTracker yaml-cpp)
pods_install_libraries(OptotrakMarkerCost)
pods_install_headers(OptotrakMarkerCost.hpp DESTINATION perception_manipulation_tracker)
