find_package(PCL 1.5 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_library(ObjectScan SHARED ObjectScan.cpp)
pods_use_pkg_config_packages(ObjectScan lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv eigen3)
target_link_libraries(ObjectScan yaml-cpp ${PCL_LIBRARIES} z)
pods_install_libraries(ObjectScan)
pods_install_headers(ObjectScan.hpp DESTINATION perception_manipulation_tracker)

add_executable(runObjectScanner runObjectScanner.cpp)
pods_use_pkg_config_packages(runObjectScanner lcm bot2-core bot2-lcmgl-client bot2-frames bot2-param-client kinect-utils opencv drake-convex-hull eigen3 opencv kinect-utils)
target_link_libraries(runObjectScanner ObjectScan drakeRBM drakeJoints drakeXMLUtil drakeCommon yaml-cpp ${PCL_LIBRARIES} z)
pods_install_executables(runObjectScanner)
